// Copyright 2024 TII (SSRC) and the Ghaf contributors
// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";
option go_package = "./socketproxy";
package socketproxy;

message Empty {}

message SyncData {
    uint32 Status = 1;
}

message SocketDataStream {
    bytes Data = 1;
}

service SocketStream {
    rpc Sync(SyncData) returns (SyncData) {}
    rpc ReceiveData(stream SocketDataStream) returns (Empty) {}
}

